# pypi-package-template

./: README.md  finalize.py  initialize.py
templates/: AUTHORS.rst  CONTRIBUTING.rst  README.rst  pyproject.toml
templates/.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
templates/docs/: conf.py  index.rst  installation.rst  modules.rst  usage.rst
templates/licenses/: APACHE
templates/src/{{module_name}}/: __init__.py
templates/tests/: test_fibonacci.py
