[tool.poetry]
name = "{{ pypi_name }}"
version = "0.1.0"
description = "{{ description }}"
authors = ["{{ author_name }} <{{ author_email }}>"]
license = "MIT"
include = ["README.rst", "CHANGELOG.rst", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pylint-runner = "^0.6.0"
sphinx-rtd-theme = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.2.4"}
black = "^22.1.0"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.ini_options]
disable = ["C0330", "C0326", "R0801"]
max-line-length = 88
ignore = "docs"

[tool.pylint.master]
ignore = "docs"

[tool.isort]
profile = "black"
multi_line_output = 3
